adicionando validação na porcentagem da cobertura

--- a/.github/workflows/junit.yml
+++ b/.github/workflows/junit.yml
@@ -38,6 +38,6 @@ jobs:
           if (( $(echo "$COVERAGE < $THRESHOLD" | bc -l) )); then
             echo "Error: Coverage is below threshold ($THRESHOLD%)"
             exit 1
-          else
+          else if (( $(echo "$COVERAGE > $THRESHOLD" | bc -l) )) then
             echo "Coverage is satisfactory"
           fi
