--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 	<description>System developed for order control</description>
 	<properties>
 		<java.version>11</java.version>
+		<sonar.organization>bluesburger</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 	<dependencies>
 		<dependency>
